# samp-discord-connector

./: .gitignore  CMakeLists.txt  README.md  discord-connector.inc.in
.github/workflows/: build.yml
cmake/: AMXConfig.cmake  AddSAMPPlugin.cmake  FindSAMPSDK.cmake
libs/log-core/: CMakeLists.txt
libs/log-core/src/: CMakeLists.txt
libs/log-core/src/amx/: amx.c  amx.h  amxplugin2.cpp
libs/sdk/: amxplugin2.cpp
libs/sdk/amx/: amx.h
src/: Bot.cpp  Bot.hpp  Logger.hpp  main.cpp  natives.cpp  natives.hpp
